# QQuickView

./: README.adoc
6-4QQuickView/: CMakeLists.txt
6-4QQuickView/main/: CMakeLists.txt  qml.qrc
6-4QQuickView/main/qml/: qml.qml
6-4QQuickView/main/src/: main.cpp
